--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-OPENAI_API_TYPE="azure"
-AZURE_OPENAI_ENDPOINT="insert_endpoint_here"
+AZURE_OPENAI_ENDPOINT="your-azure-openai-endpoint"
+AZURE_OPENAI_API_KEY="your-azure-openai-api-key"
 AZURE_OPENAI_DEPLOYMENT_NAME="gpt-4o"
 AZURE_OPENAI_API_VERSION="2024-05-01-preview"
-AZURE_OPENAI_API_KEY="insert_key_here"
