--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 AZURE_OPENAI_ENDPOINT="your-azure-openai-endpoint"
 AZURE_OPENAI_API_KEY="your-azure-openai-api-key"
 AZURE_OPENAI_DEPLOYMENT_NAME="gpt-4o"
+AZURE_OPENAI_EMBEDDING_NAME="text-embedding-ada-002 model"
 AZURE_OPENAI_API_VERSION="2024-05-01-preview"
